# old-nicksanford.github.io

./: .gitignore  .gitmodules  CNAME  Makefile  archive.html  deployCommand  hakyllblog.cabal  index.html  projects.html  projects.markdown  site.hs
css/: default.css
drafts/: draft.markdown
posts/: 2016-02-14-silly-side-projects.html  2016-02-14-silly-side-projects.markdown  2016-02-16-first-go-at-elm.html  2016-02-16-first-go-at-elm.markdown  2016-02-21-elm-is-awesome.html  2016-02-21-elm-is-awesome.markdown  2018-07-18-recurse-center.html  2018-07-18-recurse-center.markdown  2018-08-06-haskell-pyramid.html  2018-08-06-haskell-pyramid.markdown
templates/: default.html  post-list.html
